--- a/index.html
+++ b/index.html
@@ -378,40 +378,16 @@
             <h3>🔍 Search for Jobs by Category</h3>
             <div class="categories-grid">
                 <div class="category-card">
-                    <h4>Government Jobs (Sarkari Naukri)</h4>
-                    <p>Latest government job notifications and applications</p>
+                    <h4>Post Office Jobs</h4>
+                    <p>GDS, MTS, Postman & other India Post vacancies</p>
                 </div>
                 <div class="category-card">
-                    <h4>Railway Jobs</h4>
-                    <p>RRB Group D, ALP, and other railway vacancies</p>
+                    <h4>Delhi Metro Jobs</h4>
+                    <p>DMRC openings for engineers, operators, and more</p>
                 </div>
                 <div class="category-card">
-                    <h4>Police & Defense Jobs</h4>
-                    <p>Police constable, CISF, and defense opportunities</p>
-                </div>
-                <div class="category-card">
-                    <h4>Banking & Finance</h4>
-                    <p>Bank jobs, financial sector opportunities</p>
-                </div>
-                <div class="category-card">
-                    <h4>Teaching & Education</h4>
-                    <p>Teaching positions and educational sector jobs</p>
-                </div>
-                <div class="category-card">
-                    <h4>Sports Quota Recruitments</h4>
-                    <p>Special recruitment for sports persons</p>
-                </div>
-                <div class="category-card">
-                    <h4>10th / 12th Pass Jobs</h4>
-                    <p>Jobs for 10th and 12th pass candidates</p>
-                </div>
-                <div class="category-card">
-                    <h4>Graduation & Diploma Based</h4>
-                    <p>Jobs requiring graduation or diploma</p>
-                </div>
-                <div class="category-card">
-                    <h4>Private Sector Jobs</h4>
-                    <p>Private company opportunities and corporate jobs</p>
+                    <h4>Delhi Airport Jobs</h4>
+                    <p>Ground staff, security, cabin crew and admin roles</p>
                 </div>
             </div>
         </div>
@@ -429,16 +405,13 @@
             <h3>📢 Featured Jobs This Week</h3>
             <ul class="jobs-list">
                 <li class="job-item">
-                    <strong>Rajasthan Police Constable</strong> – Apply by Nov 5, 2025
+                    <strong>India Post GDS Recruitment</strong> – Apply by Aug 10, 2025
                 </li>
                 <li class="job-item">
-                    <strong>Railway Group D</strong> – Apply by Sep 15, 2025
+                    <strong>Delhi Metro (DMRC) Recruitment</strong> – Apply by Aug 20, 2025
                 </li>
                 <li class="job-item">
-                    <strong>India Post GDS</strong> – Apply by Aug 10, 2025
-                </li>
-                <li class="job-item">
-                    <strong>Patwari Bharti 2025</strong> – Apply by Oct 18, 2025
+                    <strong>Delhi Airport Ground Staff Jobs</strong> – Apply by Aug 25, 2025
                 </li>
             </ul>
             <div class="view-all-btn">
