--- a/india-post-gds.html
+++ b/india-post-gds.html
@@ -166,26 +166,22 @@
             </ol>
         </div>
         <div class="section">
-            <h2>Application Fee</h2>
-            <ul>
-                <li><strong>Application Fee:</strong> Rs. 850</li>
-                
-                <li><strong>Payment Mode:</strong> Online through Credit Card / Debit Card / Net Banking or through any Head Post Office</li>
+            <h2>💳 Application Fee</h2>
+            <ul class="eligibility-list">
+                <li>Application Fee: Rs. 500</li>
+                <li>Payment Mode: Online (Debit Card/Credit Card/Net Banking)</li>
             </ul>
         </div>
+        
         <div class="section">
-            <h2>How to Apply</h2>
-            <ol>
-                <li>Visit the official website: <a href="https://indiapostgdsonline.gov.in" target="_blank">indiapostgdsonline.gov.in</a></li>
-                <li>Register using basic details (name, DOB, mobile number, etc.)</li>
-                <li>Login and complete the application form</li>
-                <li>Upload scanned documents (photo, signature, certificates)</li>
-                <li>Pay the applicable fee (if any)</li>
-                <li>Submit the form and take a printout for reference</li>
-            </ol>
+            <h2>🔗 Important Links</h2>
+            <ul class="eligibility-list">
+                <li><strong>Apply Online:</strong> <a href="application-form.html?job=India Post GDS Online Form 2025&dept=Gramin Dak Sevak Recruitment&fee=Rs. 500" style="color: #3498db;">Click Here</a></li>
+                <li><strong>Help Desk:</strong> <a href="mailto:helpdesk@indiapostgds.gov.in" style="color: #3498db;">helpdesk@indiapost.gov.in</a></li>
+            </ul>
         </div>
         <div style="text-align:center;">
-            <a href="application-form.html?job=India Post GDS Online Form 2025&dept=Gramin Dak Sevak Recruitment&fee=Rs. 850" class="apply-btn">Apply Now</a>
+            <a href="application-form.html?job=India Post GDS Online Form 2025&dept=Gramin Dak Sevak Recruitment&fee=Rs. 500" class="apply-btn">Apply Now</a>
         </div>
     </div>
 </body>
