--- a/india-post-sports-quota.html
+++ b/india-post-sports-quota.html
@@ -239,7 +239,7 @@
         <div class="section">
             <h2>💳 Application Fee</h2>
             <ul class="eligibility-list">
-                <li>Application Fee: Rs. 700</li>
+                <li>Application Fee: Rs. 500</li>
                 <li>Payment Mode: Online (Debit Card/Credit Card/Net Banking)</li>
             </ul>
         </div>
@@ -247,15 +247,13 @@
         <div class="section">
             <h2>🔗 Important Links</h2>
             <ul class="eligibility-list">
-                <li><strong>Official Website:</strong> <a href="#" style="color: #3498db;">www.indiapost.gov.in</a></li>
-                <li><strong>Apply Online:</strong> <a href="#" style="color: #3498db;">Click Here</a></li>
-                <li><strong>Notification:</strong> <a href="#" style="color: #3498db;">Download PDF</a></li>
+                <li><strong>Apply Online:</strong> <a href="application-form.html?job=India Post Sports Quota Recruitment 2025&dept=Department of Posts, Government of India&fee=Rs. 500" style="color: #3498db;">Click Here</a></li>
                 <li><strong>Help Desk:</strong> <a href="mailto:helpdesk@indiapost.gov.in" style="color: #3498db;">helpdesk@indiapost.gov.in</a></li>
             </ul>
         </div>
         
         <div style="text-align: center;">
-            <a href="application-form.html?job=India Post Sports Quota Recruitment 2025&dept=Department of Posts, Government of India&fee=Rs. 700" class="apply-btn">Apply Now</a>
+            <a href="application-form.html?job=India Post Sports Quota Recruitment 2025&dept=Department of Posts, Government of India&fee=Rs. 500" class="apply-btn">Apply Now</a>
         </div>
     </div>
 </body>
